[workspace]
members = ["aggregator", "deployer", "test-utils"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/soroswap/aggregator"
homepage = "https://github.com/soroswap/aggregator"

[workspace.dependencies]
soroban-sdk = "23.0.0-rc.2.4"
test-utils = { path = "./test-utils" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
