[package]
name = "test-utils"
authors = ["esteblock"]
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["no_std", "wasm", "soroswap", "amm", "soroban"]
publish = true


[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = [] 