[package]
name = "aqua-adapter"
version = "0.1.0"
edition = { workspace = true }
description = "Aqua-Adapter is a smart contract on the Soroban platform, tailored for use with the Soroswap-Aggregator. It facilitates efficient transaction routing through the Aqua protocol."
homepage = { workspace = true }
repository = { workspace = true }
authors = ["esteblock"]
readme = "README.md"
keywords = ["no_std", "wasm", "soroswap", "amm", "soroban"]
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
adapter-interface = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
