[package]
name = "soroswap-aggregator-adapter-interface"
authors = ["coderipper <joaquin@paltalabs.io>, esteblock"]
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }