[package]
name = "phoenix-proxy"
version = "0.1.0"
edition = "2021"
description = "Phoenix-Proxy is a smart contract on the Soroban platform, tailored for use with the Soroswap-Aggregator. It facilitates efficient transaction routing through the Phoenix protocol."
homepage = "https://github.com/soroswap/aggregator"
repository = "https://github.com/soroswap/aggregator"
authors = ["coderipper <joaquin@paltalabs.io>"]
readme = "README.md"
keywords = ["no_std", "wasm", "soroswap", "amm", "soroban"]
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.5.0" }
soroswap-library = "0.3.0"
# num-integer = { version = "0.1.45", default-features = false, features = [
#   "i128",
# ] }

[dev_dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
