[package]
name = "soroswap-proxy"
version = "0.1.0"
edition = "2021"
description = "Soroswap-Proxy is a smart contract on the Soroban platform, tailored for use with the Soroswap-Aggregator. It facilitates efficient transaction routing through the Soroswap protocol."
homepage = "https://github.com/soroswap/aggregator"
repository = "https://github.com/soroswap/aggregator"
authors = ["coderipper <joaquin@paltalabs.io>"]
readme = "README.md"
keywords = ["no_std", "wasm", "soroswap", "amm", "soroban"]
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.0.1-preview.3" }
soroswap-aggregator-proxy-interface={ path="../interface", version="0.1.0", package="soroswap-aggregator-proxy-interface" }

[dev-dependencies]
soroban-sdk = { version = "21.0.1-preview.3", features = ["testutils"] }
soroswap-aggregator-proxy-interface={path="../interface"}

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
